--- a/styleCSS/header.css
+++ b/styleCSS/header.css
@@ -8,7 +8,7 @@ html,body,.footer{
  #nav-icone-menu,
  .fundo-texto-menu,.fundo-clase,.fundo-menu,.fundo-lupa,#input-lupa,#listamob,#fechar-busca,.fundo-menu,.caminho-mobile,.fundo-carrinhomob,.clique-carromob,#carrinho-fecharmob{
     display: none;
-    color: #02141c;
+    color: white;
 
 }
 
