--- a/css/mob/produtos.css
+++ b/css/mob/produtos.css
@@ -4,10 +4,14 @@
     flex-wrap: wrap;
     margin-top: 60px;
 }
-.fundo-categoria{
+#fundo-categoria{
     display: flex;
-    justify-content: space-evenly;
-    min-width: 90%;
+    width: 80%;
+    justify-content:space-between;
+    align-items: center;
+    font-size:20px; 
+    border-bottom: 2px solid black;
+    padding: 15px;
 }
 #texto-categoria{ 
     font-size: 20px;
@@ -75,6 +79,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 90px;
+
 }
 #fim-categoria{
     display: flex;
