--- a/css/mob/venda.css
+++ b/css/mob/venda.css
@@ -18,9 +18,10 @@ body{
     justify-content:space-between;
     align-items: normal;
     background-color: #0c212d;
-    height: 240px;
+    height: 90px;
     width: 100%;
     margin: 0;
+
 }
 
 /* menu desativado */
@@ -33,7 +34,8 @@ body{
     padding: 10px;
     margin: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
+    background-color:#0c212d;
 }
 #icone-menu,.config-logo,.config-lupa{
     transform: translateY(-20px);
@@ -53,8 +55,7 @@ config-menu - configuração do icone menu
     align-items: center;
     font-size: 35px;
     color: white;
-    padding: 20px;  
-
+    padding: 20px;
 }
 .config-menu{
     z-index: 2;
@@ -394,3 +395,125 @@ a{
 
 
 
+/*MAIN VENDA*/
+
+.mainvenda{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    padding: 0px;
+    background-color: #0c212d;
+}
+
+.form{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    width: 100%;
+    justify-content: space-evenly;
+    border: 0px;
+    background-color: #0c212d;
+}
+#nome,#email,#tel,#pedido-envio,#preço-envio{
+    margin-top: 25px;
+    width: 90%;
+    height: 40px;
+    font-size: 25px;
+    border-radius: 25px;
+    padding: 5px;
+    outline: 0;
+    border: 0;
+    transition: 0.5s;
+}
+#pedido-envio,#preço-envio{
+    display:none;
+}
+#nome:focus,
+#email:focus,
+#tel:focus{
+    transition: 0.5s;
+    font-size: 22px;
+    padding: 10px;
+}
+#btn{
+    margin-top:20px;
+    width: 50%;
+    font-size: 30px;
+    outline: 0;
+    border: 0;
+    padding: 8px;
+    border-radius: 25px;
+    background-color: #0794d3;
+    color: white;
+    transition: 0.5s;
+}
+#btn:hover{
+    border-bottom: 8px solid #0794d3;
+    background-color: #0c212d;
+}
+
+#titulo-cadastro{
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+}
+#texto-cadastro{
+    width: 80%;
+    margin: 0;
+    transform: translateY(-15px);
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+}
+
+.section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: rgb(229, 229, 229);
+}
+#titulo-duvidas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 24px;
+    font-weight: bold;
+}
+#titulo-icone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+    width: 100%;
+    color: green;
+}
+#contato-duvidas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+}
+#fale{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    font-size: 20px;
+    font-weight: bold;
+    outline: 0;
+    border: 0;
+    padding: 15px;
+    background-color: #0794d3;
+    color: white;
+}
+#fale:hover{
+    background-color: #0c212d;
+}
