--- a/css/mob/unico.css
+++ b/css/mob/unico.css
@@ -67,16 +67,17 @@
     width: 50%;
     padding: 15px;
     height: 100%;
+
     line-height: 40%;
 
 }
 #de{
     display: flex;
-
-    flex-wrap: wrap;
-    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    min-width: 100%;
     position: relative;
-
+    transform: translateX(80px);
 }
 #valor-antigo{
     display: flex;
@@ -92,7 +93,7 @@
     font-weight: bold;
     font-size: 20px;
     margin: 15px;
-    color: red;
+    color: blue;
 }
 
 .product-price{
@@ -101,7 +102,7 @@
     padding:4px;
 }
 #price-parcela{
-    font-size: 15px;
+    font-size: 17px;
     width: 100%;
     font-weight: bold;
     text-align: center;
@@ -113,6 +114,7 @@
 s{
     color: red;    
     font-weight: bold;
+
 }
 
 
@@ -146,8 +148,8 @@ s{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    padding: 10px;
+    min-width: 50%;
+    padding: 0px;
     height: 100%;
     transform: translateY(8px);
 }
