--- a/css/mob/cabeçalho.css
+++ b/css/mob/cabeçalho.css
@@ -17,7 +17,7 @@ body{
     flex-wrap: wrap;
     justify-content:space-between;
     align-items: normal;
-    background-color: #0c212d;
+    background-color: #1a4781;
     height: 240px;
     width: 100%;
     margin: 0;
