--- a/css/style/header.css
+++ b/css/style/header.css
@@ -30,7 +30,7 @@ header{
     align-items: center;
     width: 100%;
     height: 90px;
-    background-color: #1a4781;
+    background-color: #0c212d;
     color: white;
     top: 0;
 }
@@ -63,7 +63,7 @@ a{
 .fundo-pesquisa{
     display: flex;
     flex-wrap: wrap;
-    background-color: #1a4781;
+    background-color: #071a25;
     width: 30%;
     height: 40%;
     overflow:hidden;
@@ -73,7 +73,7 @@ a{
     display: flex;
 
     flex-wrap: wrap;
-    background-color: #3b71a7;
+    background-color: #071a25;
     width: 30%;
     height: 300px;
     transform: translateY(120px);
