--- a/css/style/venda.css
+++ b/css/style/venda.css
@@ -134,6 +134,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
     display: flex;
     background-color: #0c212d;
@@ -206,7 +207,42 @@ nav{
     font-weight: bold;
     color: white;
 }
-
+.pagar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    width: 100%;
+}
+#fazer-pagamento{
+    margin-top:20px;
+    width: 30%;
+    font-size: 30px;
+    outline: 0;
+    border: 0;
+    padding: 8px;
+    border-radius: 25px;
+    background-color: #0794d3;
+    color: white;
+    transition: 0.5s;
+    cursor: pointer;
+}
+#fazer-pagamento:hover{
+    border-top: 8px solid #0794d3;
+    border-bottom: 8px solid #0794d3;
+    border-left: 12px solid #0794d3;
+    border-right: 12px solid #0794d3;
+    background-color: #0c212d;
+}
+#titulo-pagar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 20px;
+    color: white;   
+}
 .section{
     display: flex;
     flex-wrap: wrap;
