--- a/css/campanhadesk.css
+++ b/css/campanhadesk.css
@@ -1,9 +1,26 @@
 .campanhadesk{
     display: none;
-    background-color: red;
     width: 100%;
     height: 400px;
     margin-top: 40px;
+}
+
+#titulo-produtopro{
+    font-size: 16px;
+    font-weight:400;
+    color: white;
+}
+#ligarpro{
+    color: #0794d3;
+}
+#ligarpro:hover{
+    color: #fbb03b;
+}
+#apagarpro{
+    color: #fbb03b;
+}
+#apagarpro:hover{
+    color: #0794d3;
 }
 
 
