--- a/css/productdesk.css
+++ b/css/productdesk.css
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .section-primeiro{
     display: flex;
     flex-direction: row;
@@ -45,6 +48,8 @@ font-size: 20px;
     justify-content: center;
     margin: -0px;
 }
+
+
 .bloco{
    display: flex;
    flex-direction: row;
@@ -58,7 +63,15 @@ font-size: 20px;
    height: 400px;
    overflow: hidden;
    padding: 0px;
+   padding: 10px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+
+.fundo-img-produto{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 #img-produto {
     display: flex;
@@ -72,41 +85,118 @@ font-size: 20px;
     transition: 0.8s;
     border-radius:0px ;
     border: 1px solid #0c212d;
-    transform: translateY(10px);
+    transform: translateY(-10px);
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
 }
-#titulo-produto{
+
+
+.fundo-tituloautor-produto{
     display: flex;
-    flex-direction: left;
-    text-align: center;
     justify-content: center;
+    flex-wrap: wrap;
+    position: relative;
+    height: 25%;
+    padding: 0px;
     width: 100%;
-    margin: 0;
+}
+#titulo-produto{
     font-size: 16px;
-    font-weight: bold;
-    padding: 5px;
+    font-weight:400;
 }
 #autor-produto{
     display: flex;
+    justify-content: left;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    color: rgb(97, 97, 97);
+    color: #fbb03b;
     font-weight: bold;
-    padding: 0px;
-    font-size: 15px;
+    font-size: 14px;
+    margin-top: -10px;
+    width: 100%;
 }
-#preço-produto{
+
+
+
+#avalia-produto{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 0px;
+    font-size: 23px;
+    margin-top: -28px;
+}
+#texto-avalia{
+    font-size: 16px;
+    color: #0794d3;
+    font-weight: bold;
+}
+#ligar{
+    color: #fbb03b;
+}
+#ligar:hover{
+    color: #0c212d;
+}
+#apagar{
+    color: #0c212d;
+}
+#apagar:hover{
+    color: #fbb03b;
+}
+
+
+
+
+
+
+
+
+
+
+.preço-produtoicone{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: -0px;
+    align-items:start;
+    padding: 0px;
+    height: 8%;
+    margin-top: -20px;
+}
+.fundo-preço-produto{
+
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width:80%;
+    height: 100%;
+
+}
+#preço-produto{
     font-size: 23px;
     color: #0794d3;
     font-weight: bold;
+    margin: 0;
 }
+
+
+#fundo-produto-iconebtn{
+    width: 20%;
+    height:100%;
+    border-radius: 60px;
+}
+
+
+#produto-iconebtn{
+    font-size: 30px;
+    color:#0794d3;
+    margin-right:20px;
+}
+
+
+
+
+
+
+
 
 
 .fim-categoria{
