--- a/mob/mobproduto.css
+++ b/mob/mobproduto.css
@@ -24,7 +24,10 @@
         font-weight: bold;
         margin-left: 0px;
     }
-    
+    .bloco{
+        padding: 0px;
+        margin: 0px;
+    }
     
     #blocomob{
         display: flex;
@@ -33,8 +36,9 @@
         align-items: center;
         justify-content: center;
         width: 210px;
-        padding: 15px;  
-        margin-left: 5px;
+        height: 430px;
+        padding: 0px;  
+        margin: 0px;
     }
     
     #img-produto{
@@ -45,25 +49,25 @@
         height: 200px;
         border-radius: 10px;
     }
+    .fundo-tituloautor-produto{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
     #titulo-produto{
         display: flex;
         justify-content: center;
         align-items: center;
-      
+        text-align: center;
         width: 100%;
     }
-    #autor-produto{
+
+    .mobautor-produto, #autor-produto{
         display: flex;
-        justify-content: left;
-        flex-wrap: wrap;
-        font-size: 15px;
-        font-weight: bold;
-        padding: 0px;
-        margin:0px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         width: 100%;
-        color: rgb(97, 97, 97);
-        overflow: hidden;
-        position: relative;
     }
     #preço-produto{
         padding: 0px;
@@ -95,9 +99,7 @@
         min-width: 60%;
         font-weight: bold;
     }
-    .fim-categoriamob{
-        
-    }
+
     #fim-categoria:hover{
         background-color: #0c212d;
     }
@@ -118,6 +120,7 @@
     }
     
 }
+
 @media (max-width:470px){
     #blocomob{
         display: flex;
@@ -130,6 +133,7 @@
         margin-left: 5px;
     }
 }
+
 @media(max-width:440px){
     #blocomob{
         display: flex;
@@ -173,7 +177,6 @@
     
     .section-primeiro{
         display: flex;
-
         flex-wrap: wrap;
         margin-top: 60px;
     }
@@ -223,24 +226,9 @@
         border-radius: 10px;
     }
     #titulo-produto{
-        display: flex;
-        justify-content: center;
-        align-items: center;
         width: 100%;
     }
-    #autor-produto{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        font-size: 15px;
-        font-weight: bold;
-        padding: 0px;
-        margin:0px;
-        width: 100%;
-        color: rgb(97, 97, 97);
-        overflow: hidden;
-        position: relative;
-    }
+
     #preço-produto{
         padding: 0px;
         width: 100%;
@@ -334,24 +322,9 @@
         border-radius: 10px;
     }
     #titulo-produto{
-        display: flex;
-        justify-content: center;
-        align-items: center;
         width: 100%;
     }
-    #autor-produto{
-        display: flex;
-        justify-content: left;
-        flex-wrap: wrap;
-        font-size: 15px;
-        font-weight: bold;
-        padding: 0px;
-        margin:0px;
-        width: 100%;
-        color: rgb(97, 97, 97);
-        overflow: hidden;
-        position: relative;
-    }
+
     #preço-produto{
         padding: 0px;
         width: 100%;
