--- a/css/mainproduto.css
+++ b/css/mainproduto.css
@@ -343,7 +343,7 @@ main{
 
 section{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     height: 600px;
     color: black;
@@ -354,7 +354,22 @@ section{
     color: black;
     box-shadow:rgba(0, 0,0,0.24) 0px 4px 3px 0px; 
     width:40% ;
+    background-color: orange;
 }
+
+.section-primeiro{
+    display: flex;
+    justify-content: left;
+    position: relative;
+    width: 100%;
+    overflow-x:hidden;
+}
+
+
+
+
+
+
 
 
 .texto-sectionum{
@@ -423,16 +438,63 @@ section{
     font-size: 40px;
     color: white;
 }
-.section-primeiro{
-    display: flex;
-    color: black;
-}
-.fundo-categoria{
+
+
+
+
+
+
+
+
+
+.fundo-categoriasolo{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:space-between;
+    padding-left: 20px;
     font-weight: bold;
+    flex-wrap: wrap;
+    width: 100%;
 }
+.fundo-produtossolo{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: left;
+    overflow-x:visible;
+    padding: 10px;
+
+}
+
+
+
+
+
+
+
+
+.novopasse{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    width: 20%;
+    font-size: 30px;
+    color: #0794D3;
+    cursor: pointer;
+}
+
+#seta-left:hover{
+    color: #031620;
+}
+
+#seta-right:hover{
+    color: #031620;
+}
+
+
+
+
+
 
 
 
