--- a/css/maindesk.css
+++ b/css/maindesk.css
@@ -2,7 +2,7 @@ main{
 display: flex;
 flex-wrap: wrap;
 width: 100%;
-transform: translateY(100px);
+margin-top: 120px;
 }
      
 
@@ -261,22 +261,74 @@ li span {
 
 
 
-/*////////////// CAMPANHA ///////*/
+
+
+
+
+
+
+
+
+
+
+
+/*////////////// PRODUTO CAMPANHA ///////*/
 .fundo-campanha{
     display: flex;
-
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
     transform: translateY(-200px);
-    background-color: #0C212D;
-    width: 100%;
-    height: 600px;
+    background-color:#031620;
 }
+.animaçao-campanhafrente{
+    animation: setair 2s ease-in-out;
+    animation-fill-mode:both;
+}
+
+@keyframes setair {
+    100%{
+        margin-left: -1550px;
+    }
+}
+
+.animaçao-campanhaatras{
+    animation: atras 2s ease-in-out;
+    animation-fill-mode: both;
+}
+
+@keyframes atras {
+    100%{
+        margin-left:0px;
+    }
+}
+
+.campanha-overflow{
+    width:100%;
+    display: flex;
+    justify-content: space-evenly;
+    overflow-x: auto;
+    flex-direction: row;
+    padding: 10px;
+}
+
+#campanhaseçaoleft,#campanhaseçaoright{
+    color: #0794D3;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+#campanhaseçaoleft:hover,
+#campanhaseçaoright:hover{
+    color: #FBB03B;
+}
+
 .bloco-campanha{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-     width: 250px;
+     min-width: 350px;
      height: 460px;
      padding: 10px;
      border-radius: 40px;
@@ -284,6 +336,7 @@ li span {
      border-top: 2px solid white;
      padding: 20px;
      transform: scale(0.9);
+     margin-left: 80px;
 }
 .fundo-imagembook{
     display: flex;
@@ -294,23 +347,31 @@ li span {
     margin-top: -0px;
     padding: 10px;
 }
-#ebookcampanhaladum,#ebookcampanha,#ebookcampanhaladdois{
-    width:250px;
-    height: 180px;
+
+
+#ebookcampanhaladum{
+    min-width: 140px;
+    height: 195px;
+    transform: rotate(-30deg) scale(1.0) translateX(40px) translateY(40px);
     border-radius:20px ;
     border: 2px solid white;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
 }
-#ebookcampanhaladum{
-    transform: rotate(-30deg) scale(1.0) translateX(40px) translateY(40px);
-}
 #ebookcampanhaladdois{
+    min-width: 140px;
+    height: 195px;
     transform: rotate(30deg) scale(1.0) translateX(-40px) translateY(40px);
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
 }
 #ebookcampanha{
     z-index: 2;
-    width: 250px;
-    height: 200px;
+    min-width: 150px;
+    height: 210px;
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
 }
 
 #ebookcampanha:hover{
@@ -339,12 +400,146 @@ li span {
     transition-timing-function:cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+
+
+
+
+
+
+.fundo-imagembookcigana{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    width: 50px;
+    height: 210px;
+    margin-top: -0px;
+    padding: 10px;
+    margin-left: 100px;
+}
+#ebookcampanhaladumcigana,#ebookcampanhacigana,#ebookcampanhaladdoiscigana,#ebookcampanhaladdotrescigana,#ebookcampanhaladdoquatrocigana{
+    width:250px;
+    height: 180px;
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+#ebookcampanhaladumcigana{
+    transform: rotate(-30deg) scale(1.0) translateX(40px) translateY(40px);
+}
+
+
+#ebookcampanhacigana{
+    z-index: 2;
+    width: 250px;
+    height: 200px;  
+}
+
+#ebookcampanhaladdoiscigana{
+    z-index: 2;
+    width: 250px;
+    height: 200px;
+    transform: translateX(-40px);  
+}
+
+#ebookcampanhaladdotrescigana{
+    z-index: 1;
+    width: 250px;
+    height: 200px;
+    transform: translateX(-100px);  
+}
+#ebookcampanhaladdoquatrocigana{
+    transform: rotate(30deg) scale(1.0) translateX(-130px) translateY(90px);
+}
+
+
+#ebookcampanhacigana:hover{
+    border: 0;
+    border-radius:0 ;
+    transform:  scale(1.1);
+    transition: 0.6s ;
+    transition-timing-function:cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+#ebookcampanhaladumcigana:hover{
+    border: 0;
+    border-radius:0 ;
+    z-index: 3;
+    transform: rotate(0deg) scale(1.2) translateX(90px) translateY(0px);
+    transition-duration:0.6s;
+    transition-timing-function:cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+#ebookcampanhaladdoiscigana:hover{
+    border: 0;
+    border-radius:0 ;
+    z-index: 3;
+    transform: rotate(0deg) scale(1.2) translateX(-90px) translateY(0px);
+    transition: 0.6s;
+    transition-timing-function:cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+
+
+#ebookcampanhaladumreceita{
+    min-width: 140px;
+    height: 195px;
+    transform: rotate(-30deg) scale(1.0) translateX(40px) translateY(40px);
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+#ebookcampanhaladdoisreceita{
+    min-width: 140px;
+    height: 195px;
+    transform: rotate(30deg) scale(1.0) translateX(-40px) translateY(40px);
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+#ebookcampanhareceita{
+    z-index: 2;
+    min-width: 150px;
+    height: 210px;
+    border-radius:20px ;
+    border: 2px solid white;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+
+#ebookcampanhareceitaum{
+    z-index: 2;
+    min-width: 150px;
+    height: 210px;
+    border-radius:20px ;
+    border: 2px solid white;
+    transform: rotate(-10deg);
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+#ebookcampanhareceitadois{
+    z-index: 2;
+    min-width: 150px;
+    height: 210px;
+    border-radius:20px ;
+    border: 2px solid white;
+    margin-left: -60px;
+    transform: rotate(10deg);
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
+}
+
+
+
+
+
+
+
+
+
 .texto-campanhabook{
     display: flex;
     flex-wrap:wrap ;
     width: 100%;
     margin: 0;
-    height: 150px;
+    height: 100px;
     overflow: hidden;
     padding: 10px;
 }
@@ -361,13 +556,25 @@ li span {
     width: 90%;
     margin-top:5px;
 }
+
+.fundo-campanhafinal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.fundo-comprarcampanha{
+    width: 40%;
+    margin-left: -154px;
+}
+
+
 #preco-campanha{
     font-size: 26px;
     color: #FBB03B;
     font-weight: bold;
     margin-top:-10px;
     width: 100%;
-
 }
 
 #btn-comprarcampanha{
@@ -381,6 +588,7 @@ li span {
     justify-content: center;
     display: flex;
     transform: translateY(-35px);
+    font-size: 20px;
 }
 #btn-comprarcampanha:hover{
     background-color: #0C212D;
@@ -388,13 +596,25 @@ li span {
     color: #FBB03B;
     cursor: pointer;
 }
+#ligarcamp{
+    color: #0794D3;
+    cursor: pointer;
+}
+#ligarcamp:hover{
+    color: #FBB03B;
+}
+#desligarcamp{
+    color:#FBB03B;
+}
+#desligarcamp:hover{
+    color:#0794D3;
+}
 
 
 
 
 
-
-
+/*////////////// CAMPANHA ///////*/
 
 .fundo-categoriabolha{
     display: flex;
@@ -404,7 +624,7 @@ li span {
     width: 100%;
     background-color: #031620;
     padding-top: 40px;
-    transform: translateY(-250px);
+    margin-top: -270px;
 }
 #bloco-bolha{
     display: flex;
