--- a/css/maindesk.css
+++ b/css/maindesk.css
@@ -1,8 +1,13 @@
+#icone-bookmob{
+    display: none;
+}
+
+
 main{
 display: flex;
 flex-wrap: wrap;
 width: 100%;
-margin-top: 120px;
+margin-top: 130px;
 }
      
 
@@ -11,16 +16,17 @@ margin-top: 120px;
 .fundo-carrossel{
     display: flex;
     width: 100%;
-    height: 500px;
+    height: 700px;
 }
 
 .mySlides{
     width: 100%;
+    height: 100%;
 }
 
 #img-slideshow{
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 
@@ -120,7 +126,6 @@ margin-top: 120px;
     margin-top: 25px;
     width: 200px;
     height: 300px;
-    overflow: hidden;
     padding: 25px;
     color: white;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(255, 255, 255, 0.65) 0px 4px 6px -1px, rgba(250, 246, 246, 0.08) 0px 1px 0px inset;
@@ -194,7 +199,7 @@ span{
     color: white;
     margin: 0 auto;
     text-align: center;
-    background-color: #0C212D;
+    background-color: #031620;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -272,14 +277,25 @@ li span {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
 /*////////////// PRODUTO CAMPANHA ///////*/
 .fundo-campanha{
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: row;
     transform: translateY(-200px);
     background-color:#031620;
+    overflow-x: hidden;
 }
 .animaçao-campanhafrente{
     animation: setair 2s ease-in-out;
@@ -306,9 +322,7 @@ li span {
 .campanha-overflow{
     width:100%;
     display: flex;
-    justify-content: space-evenly;
-    overflow-x: auto;
-    flex-direction: row;
+    overflow-x: hidden;
     padding: 10px;
 }
 
@@ -540,7 +554,6 @@ li span {
     width: 100%;
     margin: 0;
     height: 100px;
-    overflow: hidden;
     padding: 10px;
 }
 #titulo-campanha{
@@ -624,7 +637,7 @@ li span {
     width: 100%;
     background-color: #031620;
     padding-top: 40px;
-    margin-top: -270px;
+    margin-top: -250px;
 }
 #bloco-bolha{
     display: flex;
@@ -671,3 +684,10 @@ li span {
     margin-top: -80px;
     padding: 10px;
 }
+
+
+
+
+
+
+
