--- a/css/mainproduto.css
+++ b/css/mainproduto.css
@@ -136,7 +136,8 @@ main{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;  
+    text-align: center;  
     width:50%;
     height: 300px;
     padding: 10px;
@@ -160,6 +161,7 @@ main{
     align-items:center;
     width: 40%;
     margin-top: -20px;
+    text-align: center;
 }
 
 #icone-infor{
