--- a/mob/mobmain.css
+++ b/mob/mobmain.css
@@ -1,10 +1,10 @@
 main{
     display: flex;
     flex-wrap: wrap;
-    margin-top: -40px;
+    margin-top: 100px;
 }
 
-.fundo-produtoscampanhas{
+#campanhaseçaoleft,#campanhaseçaoright,#menu-volta,#menu-frente{
     display: none;
 }
 
@@ -44,37 +44,97 @@ main{
 
 #fundo-campanhamob{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 0px;
     background-color: #0C212D;
 }
+
+.campanha-overflow{
+    display: flex;
+    justify-content: left;
+    width: 100%;
+    padding: 0px;
+    overflow-x: scroll;   
+}
+
 #bloco-campanhamob{
     display: flex;
     justify-content: center;
     width: 400px;
     margin-top:20px;
+    margin-left: -0px;
     background-color: #0C212D;
 }
 
 
 
 #fundo-categoriabolhamob,.fundo-categoriabolha{
-    display: none;
-    justify-content: space-around;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
     width: 100%;
     padding-top: 0px;
-    transform: translateY(-200px);
+    transform: translateY(-100px);
 }
 #fundo-categoriabolhamob{
-    transform: translateY(100px);
+    transform: translateY(35px);
+    background-color: #0C212D;
 }
 #bloco-bolha{
     width: 250px;
+    margin-left: 50px;
 }
+
+.religiao-img{
+    margin-top: -30px;
+}
+
+#fundo-carrossel{
+    height: 700px;
+
+}
+#slidemob{
+    margin: 0px;
+    transform: translateY(0px);
+    height:600px;
+}
+
+.passe{
+    font-size: 25px;
+}
+
+
+.seçao-blococampanhas{
+    display: flex;
+    justify-content: left;
+    overflow-x: scroll;
+    width: 100%;
+    height: 500px;
+    transform: translateX(-0px);
+}
+
+#icone-bookmob{
+    display: flex;
+}
+
+#blocomob{
+    min-height: 450px;
+}
+#titulo-produtopro{
+    font-size: 18px;
+    text-align: center;
+}
+#autor-produto{
+    font-size: 16px;
+}
+#preço-produto{
+    font-size: 20px;
+    margin-left: 18px;
+    transform: scale(1.3);
+}
+
+
 
 
 
