--- a/mob/mobproduto.css
+++ b/mob/mobproduto.css
@@ -60,6 +60,7 @@
         align-items: center;
         text-align: center;
         width: 100%;
+        font-size: 18px;
     }
 
     .mobautor-produto, #autor-produto{
