--- a/mob/combomob.css
+++ b/mob/combomob.css
@@ -79,8 +79,7 @@
     width: 100%;
     display: flex;
     height: 800px;
-    transform: translateY(0px);
-    background-color:#0C212D;
+    transform: translateY(0px);;
 }
 
 
@@ -101,7 +100,20 @@
     flex-wrap: nowrap;
     justify-content: left;
     flex-direction: row;
-    background-color: red;
     width: 100%;
     overflow-x: scroll;
+}
+
+#bloco-campanhamob{
+    background-color: transparent;
+    min-width: 400px;
+}
+
+#titulo-campanha{
+    font-size: 20px;
+}
+
+#autor-campanha{
+    font-size: 18px;
+    color: #FBB03B;
 }
