--- a/css/maindesk.css
+++ b/css/maindesk.css
@@ -1,4 +1,4 @@
-#icone-bookmob{
+#icone-bookmob,#img-slideshowmob{
     display: none;
 }
 
@@ -28,6 +28,13 @@ margin-top: 130px;
     width: 100%;
     height: 500px;
 }
+
+#img-slideshowmob{
+    width: 100%;
+    height: 500px;
+}
+
+
 
 
 
