--- a/mob/mobmain.css
+++ b/mob/mobmain.css
@@ -4,7 +4,7 @@ main{
     margin-top: 100px;
 }
 
-#campanhaseçaoleft,#campanhaseçaoright,#menu-volta,#menu-frente{
+#campanhaseçaoleft,#campanhaseçaoright,#menu-volta,#menu-frente,#img-slideshow{
     display: none;
 }
 
@@ -132,6 +132,11 @@ main{
     font-size: 20px;
     margin-left: 18px;
     transform: scale(1.3);
+}
+
+#img-slideshowmob{
+    width: 100%;
+    height: 500px;
 }
 
 
