--- a/css/mainproduto.css
+++ b/css/mainproduto.css
@@ -279,13 +279,13 @@ main{
 
 #text-sinops{
     display: flex;
+    text-align: justify;
     width: 100%;
     height: 72%;
-    text-wrap: wrap;
-    word-break: break-all;
     padding: 10px;
-    font-size: 17px;
+    font-size: 20px;
     margin: 0px;
+
 
 }
 
